Name:                   activeAlarm-grabber
Version:                0.1.0
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Lingpo Huang <lingpo.huang@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Program to grab the Active Alarms and generate a Single Key Route Map 
Description:            Program to grab the Active Alarms and generate a Single Key Route Map
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Active.Alarm.Grabber
  Other-Modules:        Active.Alarm.Grabber.Internal
                        Active.Alarm.Grabber.Types
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , persist-mongo-template >= 0.5.11
                      , directed-keys >= 0.2.2
                      , persistent == 1.3.0.6
                      , monad-control == 0.3.3.0
                      , transformers == 0.3.0.0
                      , persistent-mongoDB == 1.3.1.1
                      , yaml == 0.8.8.2
                      , bytestring == 0.10.4.0

Executable activealarmgrabber
   main-is:            Main.hs
   HS-Source-Dirs:     src   
   default-language:  Haskell2010
   ghc-options:       -threaded -O2 -rtsopts -Wall   
   build-depends:       base
                      , aeson
                      , directed-keys
                      , persist-mongo-template 
                      , persistent
                      , persistent-mongoDB
                      , transformers
                      , monad-control
                      , yaml
                      , bytestring
   
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , aeson
                      , directed-keys
                      , persist-mongo-template 
                      , persistent
                      , persistent-mongoDB
                      , transformers
                      , monad-control
                      , yaml
                      , bytestring

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/activeAlarm-grabber.git
